<resources>
    <string name="app_name">YOUR AFFIRMATIONS</string>
    <string name="action_settings">Settings</string>
    <string name="first_affirmation">I am a capable UX-Designer</string>
    <string name="first_Remind_me">Remind me: Once a day</string>
    <string name="first_time">8:30 AM</string>
    <string name="Disable_Button_Name">Disable</string>
    <string name="Edit_Button_Name">Edit</string>
    <string name="fab_label">CREATE</string>

    <string name="test1">Card 1</string>
    <string name="test2">Card 2</string>
    <string name="test3">Card 3</string>
    <string name="test4">Card 4</string>
</resources>
