<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="251dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nav_view">

    </FrameLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"

            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ToolbarTheme"
            app:titleTextAppearance="@style/Toolbar.TitleText"/>

    </android.support.design.widget.AppBarLayout>


            <!--Test-->
            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="329dp"
                android:layout_height="442dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TextView"
                        android:layout_width="match_parent"
                        android:layout_height="336dp"
                        android:paddingStart="8dp"
                        android:text="@string/first_affirmation"
                        android:textColor="@color/color70black"
                        android:textSize="64sp" />

                    <View
                        style="@style/Divider"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="@string/first_Remind_me"
                        android:textColor="@color/color70black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="@string/first_time"
                        android:textColor="@color/color70black"
                        android:textSize="14dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp">

                        <Button
                            android:id="@+id/disableButtonPressed"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:text="@string/Disable_Button_Name"
                            android:textColor="@color/color70black"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/editButtonPressed"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/transparent_bg_bordered_button"
                            android:text="@string/Edit_Button_Name"
                            android:textColor="@color/color70black"
                            android:visibility="visible" />
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

    <include
        android:id="@+id/include2"

        layout="@layout/content_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.FloatingActionButton


        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginBottom="8dp"
        android:background="@drawable/new_fab_shape"
        android:elevation="8dp"
        app:elevation="8dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.DrawerLayout>